# fastest_kalman_filter_in_the_west

./: CMakeLists.txt  README.md  setup.py
modules/: FindMKL.cmake
src/: kalman.cpp
tests/: timing.py  update.py
